v1.10
* Changed merging procedure of the scores so that the decoy score between the first 
and 10th percentile becomes unity (rather than first and third quantile as previously)
* Added cross validation for the gamma and C parameters in the retention time calculation.

v1.09
* Removed bug in the normalization of retention times when using tab
delimited input.
* Introduced a range limit in the iterative least square procedure used
in the Posterior Error Probability calculations. 

v 1.08
* Retention time and callibration calculations are now available from
tab delimited files as well.
* Output xml-files according to the definitions in
http://noble.gs.washington.edu/proj/percolator/model/percolator_out.xsd

v 1.07
* Command line switch to output decoy scores (-B)
* Switch for replacing retention time features with the Klammer et al. features.

v 1.06
* Retention time calculation
* Added features for differenceto mean - retention time, pI and calibration
* Changed cross validation strategy so that only one target and one decoy set should be given as input.