@@ -1,7 +1,8 @@
 v1.10
 * Changed merging procedure of the scores so that the decoy score between the first 
 and 10th percentile becomes unity (rather than first and third quantile as previously)
-* Added cross validation for the gamma and C parameters in the retention time calculation.
+* Added independent train and test set for determining the gamma and C parameters in the retention time calculation.
+* Corrected a binning procedure, whos symptom has been a "bad_alloc()" error statement.
 
 v1.09
 * Removed bug in the normalization of retention times when using tab
